# cc_toolchains_windows

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: workflow.yml
examples/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/lib/: hello.cpp  hello.h
examples/src/: main.cpp
toolchain/windows/: BUILD  cl_wrapper.bat  cl_wrapper_x86.bat  windows_cc_config.bzl
toolchain/windows/wrapper/: BUILD.bazel  cl_wrapper.cpp  lib_wrapper.cpp
