load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "lib",
    srcs = glob(["lib/*.cpp"]),
    hdrs = glob(["lib/*.h"]),
    includes = ["lib"],
    tags = ["manual"],
)

cc_binary(
    name = "app",
    srcs = ["src/main.cpp"],
    tags = ["manual"],
    deps = [
        ":lib",
    ],
)
